--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "dotenv": "^16.0.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^6.14.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.3.5",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
